--- a/FNSProject/templates/base.html
+++ b/FNSProject/templates/base.html
@@ -647,6 +647,25 @@ label{
   background-image: linear-gradient(72deg, #ADA996, #F2F2F2, #DBDBDB, #EAEAEA);
   margin-top:0px;
 }
+.customerService{
+  background-image: url("{% static 'customerService.png' %}");
+  padding-top:20px;
+  background-size: 100% 100%;
+  height: 300px;
+  vertical-align: middle;
+}
+.csButton {
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  background-color:#4272B4;
+  color: white;
+}
+
+.csButton:hover {
+  background-color: white;
+  border:2px solid #4272B4;
+  color: black;
+}
   </style>
   <!-- Custom styles for this template -->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
@@ -840,7 +859,7 @@ label{
           <div class="dropdown-content">
             <a class="nav-link" href="{% url 'decidedMatch' %}" tabindex="-1" aria-disabled="true">일정보기</a>
             <a class="nav-link" href="{% url 'result' %}" tabindex="-1" aria-disabled="true">결과보기</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">문의하기</a>
+            <a class="nav-link" href="{% url 'cs' %}" tabindex="-1" aria-disabled="true">문의하기</a>
           </div>
         </li>
         
